k8s/mysql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-cluster-ip-service
spec:
  ports:
  - port: 3306
  selector:
    component: mysql
  clusterIP: None
